# bsnap

./: README.md  pubspec.yaml
lib/: main.dart
lib/store/: yolox_store.dart
lib/ui/: app.dart  detect_result_page.dart  home_page.dart
lib/util/: image.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
ncnn/: pubspec.yaml
ncnn/lib/: ncnn_yolox.dart
ncnn/linux/: ncnn_yolox_test.cc
ncnn/src/: CMakeLists.txt  ncnn_yolox.cc  ncnn_yolox.h
ncnn_ai/: README.md  ffigen.yaml  ncnn_ai.md  pubspec.yaml
ncnn_ai/android/: build.gradle  settings.gradle
ncnn_ai/android/src/main/: AndroidManifest.xml
ncnn_ai/ios/: ncnn_ai.podspec
ncnn_ai/ios/Classes/: ncnn_ai.c
ncnn_ai/lib/: ncnn_ai.dart  ncnn_ai_bindings_generated.dart
ncnn_ai/linux/: .gitignore  CMakeLists.txt  ncnn_ai_test.cc  ncnn_ai_test.dart
ncnn_ai/linux/ncnn-20240102-ubuntu-2204-shared/include/ncnn/: platform.h
ncnn_ai/linux/ncnn-20240102-ubuntu-2204-shared/lib/: libncnn.so.1
ncnn_ai/linux/ncnn-20240102-ubuntu-2204-shared/lib/cmake/ncnn/: ncnn-release.cmake
ncnn_ai/src/: CMakeLists.txt  ncnn_ai.cc  ncnn_ai.h
